--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,4 +29,4 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/NodeApp:latest
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/nodeapp:latest
